--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {},
   "author": "",
   "dependencies": {
-    "@vivaxy/png": "^1.3.0",
-    "pngjs": "^3.4.0"
+    "@vivaxy/png": "^1.3.0"
   }
 }
