--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "author": "",
   "dependencies": {
-    "@vivaxy/png": "^1.3.0"
+    "@vivaxy/png": "^1.3.0",
+    "ws": "^7.2.3"
   }
 }
