--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "author": "",
   "dependencies": {
     "@vivaxy/png": "^1.3.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "hbs": "^4.1.0",
+    "js-event-bus": "^1.0.1",
     "ws": "^7.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
