--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "hbs": "^4.1.0",
     "js-event-bus": "^1.0.1",
+    "uuid": "^7.0.3",
     "ws": "^7.2.3"
   },
   "devDependencies": {
